<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>tech.streamfusion</groupId>
    <artifactId>streamfusion-parent</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <name>StreamFusion</name>
    <description>Apache Flink SQL acceleration powered by Apache DataFusion.</description>

    <modules>
        <module>streamfusion-proto</module>
        <module>streamfusion-state-rocksdb</module>
        <module>streamfusion-native</module>
        <module>streamfusion-flink-planner</module>
        <module>streamfusion-flink</module>
        <module>streamfusion-flink-sql-tests</module>
        <module>streamfusion-flink-runner-tests</module>
        <module>streamfusion-nexmark-benchmarks</module>
    </modules>

    <properties>
        <revision>0.1.0-SNAPSHOT</revision>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.version>3.9.11</maven.version>
        <maven.wrapper.plugin.version>3.3.4</maven.wrapper.plugin.version>
        <maven.compiler.release>11</maven.compiler.release>
        <flink.version>2.3.0</flink.version>
        <flink.kafka.connector.version>5.0.0-2.2</flink.kafka.connector.version>
        <beam.version>2.75.0</beam.version>
        <testcontainers.version>1.21.4</testcontainers.version>
        <junit.version>5.13.4</junit.version>
        <assertj.version>3.27.4</assertj.version>
        <maven.compiler.plugin.version>3.14.0</maven.compiler.plugin.version>
        <maven.surefire.plugin.version>3.5.3</maven.surefire.plugin.version>
        <maven.failsafe.plugin.version>3.5.3</maven.failsafe.plugin.version>
        <spotless.maven.plugin.version>2.44.3</spotless.maven.plugin.version>
        <palantir.java.format.version>2.50.0</palantir.java.format.version>
        <maven.jar.plugin.version>3.4.2</maven.jar.plugin.version>
        <maven.shade.plugin.version>3.6.1</maven.shade.plugin.version>
        <protobuf.version>4.32.0</protobuf.version>
        <protobuf.maven.plugin.version>0.6.1</protobuf.maven.plugin.version>
        <os.maven.plugin.version>1.7.1</os.maven.plugin.version>
        <exec.maven.plugin.version>3.5.0</exec.maven.plugin.version>
        <rust.version>1.94.0</rust.version>
        <datafusion.version>55.0.0</datafusion.version>
        <arrow.rust.version>59.2.0</arrow.rust.version>
        <arrow.java.version>19.0.0</arrow.java.version>
        <prost.version>0.14.4</prost.version>
        <tokio.version>1.53.1</tokio.version>
        <protoc.bin.vendored.version>3.2.0</protoc.bin.vendored.version>
        <jni.rust.version>0.22.4</jni.rust.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java</artifactId>
                <version>${protobuf.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.arrow</groupId>
                <artifactId>arrow-vector</artifactId>
                <version>${arrow.java.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.arrow</groupId>
                <artifactId>arrow-memory-netty</artifactId>
                <version>${arrow.java.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.arrow</groupId>
                <artifactId>arrow-c-data</artifactId>
                <version>${arrow.java.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.beam</groupId>
                <artifactId>beam-sdks-java-nexmark</artifactId>
                <version>${beam.version}</version>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>kafka</artifactId>
                <version>${testcontainers.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.flink</groupId>
                <artifactId>flink-connector-kafka</artifactId>
                <version>${flink.kafka.connector.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.flink</groupId>
                <artifactId>flink-json</artifactId>
                <version>${flink.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.flink</groupId>
                <artifactId>flink-connector-base</artifactId>
                <version>${flink.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.flink</groupId>
                <artifactId>flink-streaming-java</artifactId>
                <version>${flink.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.flink</groupId>
                <artifactId>flink-clients</artifactId>
                <version>${flink.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.flink</groupId>
                <artifactId>flink-table-api-java-bridge</artifactId>
                <version>${flink.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.flink</groupId>
                <artifactId>flink-table-planner_2.12</artifactId>
                <version>${flink.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-wrapper-plugin</artifactId>
                    <version>${maven.wrapper.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven.jar.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>${maven.shade.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven.surefire.plugin.version}</version>
                    <configuration>
                        <useModulePath>false</useModulePath>
                        <argLine>--add-opens=java.base/java.nio=ALL-UNNAMED</argLine>
                        <forkCount>1C</forkCount>
                        <reuseForks>true</reuseForks>
                        <properties>
                            <configurationParameters>
                                junit.jupiter.execution.parallel.enabled = true
                                junit.jupiter.execution.parallel.mode.default = same_thread
                                junit.jupiter.execution.parallel.mode.classes.default = concurrent
                            </configurationParameters>
                        </properties>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>com.diffplug.spotless</groupId>
                    <artifactId>spotless-maven-plugin</artifactId>
                    <version>${spotless.maven.plugin.version}</version>
                    <configuration>
                        <java>
                            <palantirJavaFormat>
                                <version>${palantir.java.format.version}</version>
                            </palantirJavaFormat>
                            <formatAnnotations/>
                        </java>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>spotless-check</id>
                        <phase>verify</phase>
                        <goals><goal>check</goal></goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
